third_party/move/move-compiler-v2/tests/lambda/lambda3.exp
// -- Model dump before bytecode pipeline
module 0x8675309::M {
    public fun lambda_not_allowed() {
        {
          let _x: |u64|u64 with copy+drop+store = |i: u64| Add<u64>(i, 1);
          Tuple()
        }
    }
} // end 0x8675309::M

// -- Sourcified model before bytecode pipeline
module 0x8675309::M {
    public fun lambda_not_allowed() {
        let _x = |i| i + 1;
    }
}


Diagnostics:
error: Function-typed values not yet supported except as parameters to calls to inline functions
   ┌─ tests/lambda/lambda3.move:77:18
   │
77 │         let _x = |i| i + 1; // expected lambda not allowed
   │                  ^^^^^^^^^
